expected/main/core/structs/structs10a.err
ERROR: "actual/main/core/structs/structs10a.lc", line 2
struct PageTable/4K [ ptes :: Array 1K (Stored PTE) ]
^
Size of ptes is 4096 more than expected

ERROR: Aborting after previously reported error

